Fix misalignment on grid group row
Issue happens when grid has no edit icon column.

Fixes RM-30710

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -386,6 +386,7 @@
   margin-top: 2px !important;
 }
 
+.slick-group > .slick-cell,
 .slick-group > .slick-cell-checkboxsel {
    text-align: inherit;
 }
